# AUTOTEST

./: .env.template  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  pyproject.toml  setup.cfg  setup.py
autotest_package/: MANIFEST.in  README.md  docker-compose.dev.yml  env.template  pyproject.toml  requirements.txt  setup.py  structure
autotest_package/autotest/: __init__.py
autotest_package/autotest/cli/: main.py
autotest_package/autotest/config/: auth_test_data.json  llm_config.yaml  prompts4.yaml
autotest_package/autotest/core/: llm_wrapper.py  prompt_manager.py  url_extractor.py  web_test_generator.py
autotest_package/autotest/db/: autotest.db  database.py
autotest_package/autotest/tables/: domain.py  page.py  redirect.py  test_case_data.py
autotest_package/autotest/utils/: logging_utils.py
autotest_package/autotest_web_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autotest_package/backend/: Dockerfile  config.py  main.py  requirements.txt  structure
autotest_package/backend/app/: main.py
autotest_package/backend/app/api/: deps.py
autotest_package/backend/app/assets/: prompts4.yaml
autotest_package/backend/app/core/: config.py  security.py
autotest_package/backend/app/db/: base.py  seed.py  session.py
autotest_package/backend/app/models/: __init__.py  page.py  page_link.py  page_link_test_case.py  role.py  setting.py  site.py  site_alias.py  test_case.py  test_execution.py  (+3 more)
autotest_package/config/: llm_config.yaml  prompts4.yaml
autotest_package/tests/: test_web_generator.py
(+161 files in other folders)
