[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotest-web-generator"
version = "1.0.0"
description = "Automated Web Testing Framework with LLM Integration"
readme = "README.md"
authors = [{name = "Ankit Saha", email = "ankit.s@mindfiresolutions.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "selenium==4.15.2",
    "webdriver-manager==4.0.2",
    "python-dotenv==1.0.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "pillow==11.1.0",
    "pyyaml>=6.0",
    "tldextract>=5.3.0",
    "jsonschema==4.23.0",
    "langchain-openai==0.3.15",
    "langchain-groq==0.3.2", 
    "langchain-google-genai==2.1.4",
    "langchain_anthropic==0.3.18",
    "langchain_ollama==0.3.6",
    "langchain-community==0.3.23",
    "langchain==0.3.24",
    "playwright==1.42.0",
    "pyppeteer==2.0.0",
    "bs4==0.0.2"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[project.scripts]
autotest-cli = "autotest.cli.main:main"